--- a/site-wordpress-theme/css/resources.css
+++ b/site-wordpress-theme/css/resources.css
@@ -252,6 +252,11 @@ a:hover .nav-links-underline {
 	border-color: #ccc;
 }
 
+.tag-listing-total {
+	font-weight: 700;
+	margin-right: 5px;
+}
+
 /* Media queries */
 @media (min-width : 480px) {
 
